# derplib-cpp

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  STYLE.md
base/: CMakeLists.txt
base/src/: semver.cpp  stopwatch.cpp
base/tests/: log-test.cpp  semver-test.cpp  stopwatch-test.cpp  timer-test.cpp
cmake/: compile_flags.cmake  derplib_doxygen_configuration.cmake  derplib_library_functions.cmake  derplib_test_functions.cmake  gtest.cmake
container/: CMakeLists.txt
container/tests/: cfq_parallel_consumer-test.cpp  circular_queue-test.cpp
docs/: README_8md.html  STYLE_8md.html  algorithm_8h.html  algorithm_8h.js  algorithm_8h_source.html  algorithm_8ipp.html  algorithm_8ipp.js  annotated.html  annotated_dup.js  array_8h.html  array_8h.js  array_8h_source.html  array_8ipp.html  array_8ipp.js  bad__alloc_8h.html  bad__alloc_8h_source.html  base__heap__pool_8h.html  base__heap__pool_8h_source.html  cfq__parallel__consumer_8h.html  cfq__parallel__consumer_8h_source.html  cfq__parallel__consumer_8ipp.html  circular__queue_8h.html  circular__queue_8h.js  circular__queue_8h_source.html  circular__queue_8ipp.html  circular__queue_8ipp.js  classderplib_1_1base_1_1basic__logger-members.html  classderplib_1_1base_1_1basic__logger.html  classderplib_1_1base_1_1basic__logger.js  classderplib_1_1base_1_1basic__logger_1_1invalid__state-members.html  classderplib_1_1base_1_1basic__logger_1_1invalid__state.html  classderplib_1_1base_1_1basic__logger_1_1invalid__state.js  classderplib_1_1base_1_1basic__logger_1_1invalid__state__coll__graph.md5  classderplib_1_1base_1_1basic__logger_1_1invalid__state__inherit__graph.map  classderplib_1_1base_1_1semver-members.html  classderplib_1_1base_1_1semver.html  classderplib_1_1base_1_1semver.js  classderplib_1_1base_1_1semver_1_1format__error-members.html  classderplib_1_1base_1_1semver_1_1format__error.html  classderplib_1_1base_1_1semver_1_1format__error.js  (+603 more)
docs/html/: README_8md.html  algorithm_8h.html  algorithm_8h_source.html  algorithm_8ipp.html  algorithm_8ipp.js  annotated.html  array_8h.html  array_8h.js  array_8h_source.html  array_8ipp.html  cfq__parallel__consumer_8h.html  cfq__parallel__consumer_8h.js  cfq__parallel__consumer_8h_source.html  cfq__parallel__consumer_8ipp.html  circular__queue_8h.html  circular__queue_8h_source.html  circular__queue_8ipp.html  circular__queue_8ipp.js  classderplib_1_1basic__logger-members.html  classderplib_1_1basic__logger.html  classderplib_1_1basic__logger.js  classderplib_1_1basic__logger_1_1invalid__state-members.html  classderplib_1_1basic__logger_1_1invalid__state.html  classderplib_1_1basic__logger_1_1invalid__state__inherit__graph.md5  classderplib_1_1config__file-members.html  classderplib_1_1config__file.html  classderplib_1_1config__file.js  classderplib_1_1config__file_a8a70a4a32897ce20c88250a77afe099b_cgraph.map  classderplib_1_1config__file_a8a70a4a32897ce20c88250a77afe099b_icgraph.map  classderplib_1_1config__file_a8a70a4a32897ce20c88250a77afe099b_icgraph.md5  classderplib_1_1config__file_ab30c3d525e91676f315a94a4cf44a383_icgraph.md5  classderplib_1_1container_1_1cfq__parallel__consumer.html  classderplib_1_1container_1_1cfq__parallel__consumer_3_01InT_00_01ConsumerT_01_4-members.html  classderplib_1_1container_1_1cfq__parallel__consumer_3_01InT_00_01ConsumerT_01_4.html  classderplib_1_1container_1_1cfq__parallel__consumer_3_01InT_00_01ConsumerT_01_4_a049ceb0eed1f90db1acc98e3858129f2_cgraph.map  classderplib_1_1container_1_1cfq__parallel__consumer_3_01InT_00_01ConsumerT_01_4_a56f8a23411f0785f08f7207afd60f946_cgraph.md5  classderplib_1_1container_1_1circular__queue-members.html  classderplib_1_1container_1_1circular__queue.html  classderplib_1_1container_1_1circular__queue.js  classderplib_1_1experimental_1_1basic__cli-members.html  (+194 more)
docs/html/search/: all_10.js  all_14.js  all_3.js  all_4.js  all_7.js  all_a.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  enums_0.js  enumvalues_0.js  enumvalues_3.js  enumvalues_5.js  enumvalues_6.js  enumvalues_8.js  files_2.js  files_6.js  functions_0.js  functions_10.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_b.js  functions_e.js  namespaces_0.js  related_1.js  searchdata.js  typedefs_1.js  typedefs_2.js  typedefs_4.js  typedefs_5.js  typedefs_6.js  typedefs_7.js  (+2 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  (+65 more)
experimental/: CMakeLists.txt
experimental/src/: config_file.cpp
experimental/src/heap_pool_allocator/: simple_pool_alloc.cpp  simple_pool_allocator.cpp
experimental/tests/: config_file-test.cpp  ref_count_pointer-test.cpp
include/derplib/base/: log.h  log.ipp  semver.h  (+2 more)
internal/: CMakeLists.txt
newlib/: CMakeLists.txt
newlib/tests/: container-test.cpp  memory-test.cpp
src/experimental/: cli.cpp  config_file.cpp  mem_alloc.cpp  mem_alloc_exceptions.cpp  mem_alloc_heap_walk_iterator.cpp
src/util/: string.cpp
stdext/: CMakeLists.txt
stdext/src/: string.cpp
stdext/tests/: algorithm-test.cpp  array-test.cpp  demangle-test.cpp  iterator-test.cpp  memory-test.cpp  ptr-test.cpp  ranges-test.cpp  version-test.cpp
tests/: CMakeLists.txt
tests/base/: log-test.cpp  semver-test.cpp  stopwatch-test.cpp
tests/container/: cfq_parallel_consumer-test.cpp
tests/experimental/: cli-test.cpp
tests/newlib/: container-test.cpp  memory-test.cpp
tests/stdext/: cmath-test.cpp  string-test.cpp
tests/util/: array-test.cpp  ptr-test.cpp  ranges-test.cpp  string-test.cpp
util/: CMakeLists.txt
util/tests/: demangle-test.cpp  iterator-test.cpp  stats-test.cpp
(+97 files in other folders)
